--- a/Exercicios/Computação Natural/Neural Network/nn-pso-iris.ipynb
+++ b/Exercicios/Computação Natural/Neural Network/nn-pso-iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "n_inputs = 4\n",
     "n_hidden = 20\n",
     "n_classes = 3\n",
     "\n",
-    "num_samples = 150"
+    "num_samples = 112"
    ],
    "metadata": {
     "collapsed": false,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def logits_function(p, X):\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "# Forward propagation\n",
@@ -105,16 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def Get_PSO(f):\n",
     "    # Initialize swarm\n",
-    "    options = {'c1': 0.5, 'c2': 0.3, 'w':0.9}\n",
+    "    options = {'c1': 2.05, 'c2': 2.05, 'w': 2.05 * 0.729}\n",
     "\n",
     "    # Call instance of PSO\n",
     "    dimensions = (n_inputs * n_hidden) + (n_hidden * n_classes) + n_hidden + n_classes\n",
-    "    optimizer = ps.single.GlobalBestPSO(n_particles=100, dimensions=dimensions, options=options)\n",
+    "    optimizer = ps.single.GlobalBestPSO(n_particles=20, dimensions=dimensions, options=options)\n",
     "\n",
     "    # Perform optimization\n",
     "    cost, pos = optimizer.optimize(f, iters=1000)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def predict(pos, X):\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -155,6 +155,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "labelencoder = LabelEncoder()\n",
     "\n",
@@ -162,14 +163,15 @@
     "    data = pd.read_csv('databases/iris.data', names = ['sepal length', 'sepal width', 'petal length', 'petal width', 'class'])\n",
     "    target = labelencoder.fit_transform(data['class'].values)\n",
     "    data = data.drop('class', axis = 1).values\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(data, target)\n",
     "\n",
     "    def f(x):\n",
     "        n_particles = x.shape[0]\n",
-    "        j = [forward_prop(x[i], data, target) for i in range(n_particles)]\n",
+    "        j = [forward_prop(x[i], x_train, y_train) for i in range(n_particles)]\n",
     "        return np.array(j)\n",
     "\n",
     "    pos = Get_PSO(f)\n",
-    "    scores = (predict(pos, data) == target)\n",
+    "    scores = (predict(pos, x_test) == y_test)\n",
     "\n",
     "    print(\"\\n Iris \\n\")\n",
     "    print(\"Mean: \", scores.mean())\n",
@@ -184,55 +186,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 19:47:19,004 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 0.5, 'c2': 0.3, 'w': 0.9}\n",
-      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=0.00953\n",
-      "2022-03-07 19:47:54,203 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 0.009534524901048214, best pos: [ 1.61878380e+00 -1.01484291e+00  5.29846847e-01 -3.50938255e-01\n",
-      "  1.58073248e+00 -2.73379126e+00 -2.43602188e-01  2.55859315e-01\n",
-      "  1.94896117e-01 -4.67694273e-02  1.79796632e+00  4.94371143e+00\n",
-      "  6.20332720e-01  6.41653520e-01  1.54553581e-01  2.34701326e+00\n",
-      "  1.07295015e+00  4.88103177e-01  6.40680890e-01  7.12845771e-02\n",
-      "  3.75353796e-01 -3.38938558e-02 -4.74836644e-01 -5.75055111e-01\n",
-      " -3.30262737e+00  6.11839508e-01  1.62900904e-01  5.66227096e-01\n",
-      " -3.20582513e-01 -8.01336920e-01 -3.31170041e-01  7.38761983e-01\n",
-      " -6.03059507e-01  1.92764793e+00  3.98837082e-01  1.25446464e+01\n",
-      "  1.64453380e+00  4.76702208e-01  5.56667564e-01 -5.34050902e-01\n",
-      "  5.44219521e-01 -1.16487415e+00 -6.81094281e-01  7.11851768e-01\n",
-      "  5.28239879e-01  5.31382932e-02  1.42180508e+00 -2.05693455e+00\n",
-      "  7.12929832e-01  4.05953323e-02 -1.48980055e+00  1.12492666e+00\n",
-      " -4.93481943e-01 -5.19031792e-01  1.09632309e+00 -1.07239784e+00\n",
-      " -6.23919946e-01 -1.18044526e+00 -1.95771779e+00 -8.29600280e-01\n",
-      "  6.87184435e+00  1.13356933e+00  7.97219845e-01  1.14089404e+00\n",
-      " -6.48282059e-01 -1.27680408e+00 -4.60260248e-01  1.48788447e+00\n",
-      " -3.88205586e-01 -1.56115726e+00  3.29561236e-01  8.05342751e-01\n",
-      " -3.12030155e+00 -8.17556317e-01  4.75512434e-02 -3.42627403e+01\n",
-      "  3.21822279e+00 -2.07729891e+00  3.20566377e-01  4.04437934e-01\n",
-      "  7.80749751e-01 -3.11597169e+00  3.41144618e-01 -5.91071320e-01\n",
-      " -4.17967331e-01  4.88409098e-01 -5.39436489e+00 -7.16184637e-01\n",
-      "  1.63792578e+00  3.35174401e+00 -1.66831081e+00  6.19428289e-01\n",
-      "  1.04236718e+00 -5.20376751e+00  1.01567841e+00  1.45536212e+01\n",
-      " -9.39654623e-01  5.78439924e-01  2.08564488e+00  1.72191881e+00\n",
-      "  1.74402954e+00 -5.52358893e-01 -1.89032358e+00  5.94206773e-01\n",
-      " -7.50286333e-01  5.72532298e-01  1.68162751e+00  1.08057045e+00\n",
-      "  7.63789892e-02 -8.89229339e-02 -2.04256052e+00  2.01450965e+00\n",
-      " -1.73761968e+00 -6.34687094e-02  1.43992549e+00 -2.89487395e-01\n",
-      "  4.87380182e-01 -5.76606879e-01 -1.26853867e+00 -7.99185866e+00\n",
-      "  8.87479599e-01  3.34941715e+00 -3.89862087e+00 -8.78548720e-02\n",
-      " -5.40411530e+00 -1.49527135e+00 -1.96542079e-01 -4.25574128e-01\n",
-      " -6.25574287e+00 -6.19614766e-01 -3.25075493e-01  2.83796949e-01\n",
-      "  9.35721947e-02  4.07373216e-01 -1.39616711e+00  1.53325497e+00\n",
-      "  1.62476710e-02 -1.68774536e+00  1.53039050e+00  1.31117553e+00\n",
-      " -6.62158011e-02  2.66755371e+00 -1.18516989e+00  7.91567607e-01\n",
-      "  2.39379546e+00  2.44619871e+00  4.48636657e-01 -5.50913665e+00\n",
-      "  2.47345634e+00 -2.46317231e-01  2.08122353e-01  2.06026881e+00\n",
-      "  1.23530083e+00 -9.03920631e-01  1.06510273e+01  2.05398283e+00\n",
-      "  1.57922509e+00  1.60634326e-01 -1.55615292e+00 -3.31336367e-01\n",
-      "  6.28209554e-01 -6.51933473e+00 -5.47215481e-01]\n"
+      "2022-03-21 08:08:24,791 - pyswarms.single.global_best - INFO - Optimize for 1000 iters with {'c1': 0.5, 'c2': 0.3, 'w': 0.9}\n",
+      "pyswarms.single.global_best: 100%|██████████|1000/1000, best_cost=2.11e-13\n",
+      "2022-03-21 08:08:38,744 - pyswarms.single.global_best - INFO - Optimization finished | best cost: 2.1138547261874334e-13, best pos: [ 1.15845102e+00  1.19011022e-01 -1.42770492e+00  9.67014447e-02\n",
+      "  1.64960449e+00  9.76479872e-01  4.23261772e+00  8.84748721e-01\n",
+      "  1.54034374e+00  4.75452477e-01 -3.17933614e+00 -7.19183701e+00\n",
+      " -1.37851314e+00  1.10329063e+00 -2.64800403e+00  5.47366858e+00\n",
+      " -7.22497463e+00  7.10024579e-01 -5.04866470e-01  3.65825445e+00\n",
+      "  1.98005788e+00 -1.06277762e+00 -9.54339852e-01  1.27701909e+00\n",
+      "  1.67922063e-01  9.09030683e-01  1.32794051e+00  1.20919244e+00\n",
+      "  6.26334705e-01 -1.86844983e+00 -9.75902221e+00  5.39861844e-01\n",
+      "  1.52988555e+00 -1.38178418e+00  1.55710456e-01 -1.16108476e+00\n",
+      " -1.38778222e+00 -1.31308056e+00  1.58953219e+00  2.27327585e-01\n",
+      "  5.86983583e-01 -8.83188859e-01  3.00115216e+00  5.24467159e-01\n",
+      "  1.12610072e+00 -1.73031351e+00 -4.00248090e-01 -3.37183328e-01\n",
+      " -8.66081536e-01  9.38319952e-01 -1.19883556e+00  3.79230184e-02\n",
+      "  2.98767972e+00  8.28633342e-02 -2.41031349e+00 -2.46061425e-01\n",
+      " -2.50722118e+00  1.91605056e+00 -7.88059191e-01  2.34181067e-01\n",
+      "  1.84517789e-01 -3.75048489e+00  1.70252534e+00  4.78399787e-01\n",
+      "  3.07706780e-01 -1.40405581e+00 -1.32293211e+00  9.57946125e-01\n",
+      " -2.96448926e-01  2.02776988e-01 -2.06324597e+00 -1.85033430e+00\n",
+      " -1.46214538e+00  1.57860649e+00  9.56508347e-01  1.11867232e+00\n",
+      "  2.90403791e+00  3.99217378e-01 -3.55749304e-01  4.00458037e-01\n",
+      " -3.41872756e+00  8.00207804e-01  6.31066338e-01 -2.08030224e+00\n",
+      "  1.36923076e+00  2.18403566e+00 -4.07798614e+00 -1.54514474e-01\n",
+      "  8.86939818e-01 -1.83663052e+00 -1.31783433e+00 -2.09698652e+00\n",
+      " -3.17104785e+00  3.41228990e-01  6.70321750e-01  2.44006164e+00\n",
+      " -1.91567308e+00 -4.24313838e-01  4.62561768e-02  5.90070430e-01\n",
+      "  1.35013406e-01  4.08185363e-01 -4.28293183e-01 -8.67525127e-01\n",
+      "  1.25757341e+00  1.71041060e+00 -2.97050649e+00 -3.93382325e-01\n",
+      " -6.21264372e-01 -2.26978006e-01 -1.97909990e+00  1.00340508e+00\n",
+      " -1.98935211e+00 -1.81283136e+00  2.39943642e+00 -9.99942517e-01\n",
+      "  2.37828381e+00 -7.06801879e+02  6.90489362e+00  6.82982300e-02\n",
+      " -1.18012771e-01 -1.72784323e-02  1.26039834e+00  2.37245895e-02\n",
+      "  1.10489948e+00  2.97487077e+00  2.52193541e+00 -1.10871880e+00\n",
+      "  2.42706467e-01  2.73462416e+00  4.00082218e+00 -1.12945845e+00\n",
+      " -1.14615632e-01  2.31147900e-01 -3.04179730e-01 -3.49326887e-01\n",
+      " -1.40023054e+00  4.26496294e+00  1.09258520e+00  2.19753537e-01\n",
+      "  8.04244448e-01  5.31433829e-01 -1.07036989e+00 -1.10501627e-01\n",
+      " -4.83143556e+00  1.60529860e+00 -1.09056494e+00 -9.80753766e-03\n",
+      " -1.79315021e-01 -2.40643772e-01 -3.28599259e-02  1.63491054e-01\n",
+      " -3.83735844e-01 -3.67461978e+00  7.49245854e+01 -1.06996580e+01\n",
+      " -2.92553860e-01  1.46370370e-01 -1.35453811e-01 -1.08879425e+00\n",
+      " -1.75724019e+00 -1.22517361e+00 -2.45336791e+00]\n"
      ]
     },
     {
@@ -242,10 +244,8 @@
       "\n",
       " Iris \n",
       "\n",
-      "Mean:  1.0\n",
-      "Standard Deviation:  0.0\n",
-      "Min:  True\n",
-      "Max:  True\n"
+      "Mean:  0.9736842105263158\n",
+      "Standard Deviation:  0.16007269816574266\n"
      ]
     }
    ],
